- new parameter <misc/transorigsols> by default set to TRUE, that switches whether SCIP tries to transfer original
  solutions into the transformed space (in initsol and if a heuristic adds an original solution during solving)
- new parameters lp/{rootiterlim,iterlim} to set a limit on the LP iterations spend in the initial root LP and each
  LP resolve, respectively

features:
- SCIPcomputeLPRelIntPoint with normtype='s' now uses homogenized LP for computing rel.int. point too and allow to
  set relaxrows = FALSE
- the check script now recognizes MIQCP and MINLP instances
- new column showing the pseudo objective value
- time for initpre and exitpre methods is now also measured in presolving time
- digraph structure added to misc.c and pub_misc.h that can be used to handle directed graphs, compute undirected
  components in the graph, and sort these components (almost) topologically
- beta-version of a MATLAB interface can be found under interfaces/matlab
- SCIP does now print an info message when the root LP could not be solved or is unbounded
- added setup timer to all plugins and therefor SCIP<plugin-type>GetSetupTime() methods in all pub_plugin-type.h to ask
  for this time (, e.g. SCIPeventhdlrGetSetupTime() in pub_event.h)
- added counter and clock for SCIPcopy() calls
- better handling of memory limits, in particular for large problems
- estimate memory consumption for sub-SCIP and do not copy them if close to memory limit
- number of presolving calls of plugins is counted and displayed in the statistics,
  can be accessed via SCIPpresolGetNCalls() and SCIP<prop/conshdlr>getNPresolCalls()
- new methods SCIPhashGetKeyStandard() which returns the element itself as the key, SCIPhashKeyEqPtr(),
  SCIPhashKeyValPtr() which do the hash-comparison/-conversion on a pointer in pub_misc.h
- correct initialization of steepest edge weights with SoPlex 1.6.0.4
- CNF reader now creates feasibility instances per default, usage of an objective has to be set by a parameter